@@ -2254,6 +2254,7 @@ ring
 		Price = 500;
 		AttachedGod = SOPHOS;
 		TeleportPriority = 1000;
+		Alias == "ring of telecontrol";
 	}
 
 	Config RING_OF_POLYMORPH;
