@@ -6,6 +6,14 @@ This file contains SPOILERS, which might ruin your IVAN experience totally. The 
 is also provided AS IS and is probably completely unreadable.
 
 ------------------------------------------------------------------------------------
+August 6 2004 Heikki Sairanen <firstname.lastname@tut.fi>
+
+	* blue color cursor for run mode
+	* some typo corrected
+	* bananapeels can be resurrected
+	* monster portal in Oree level
+	* X swimming here now ok
+
 August 5 2004 Heikki Sairanen <firstname.lastname@tut.fi>
 
 	* bomb displacing energy field in Attnam
